--- a/index.html
+++ b/index.html
@@ -5,125 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/index.css">
+
   <title>Document</title>
 </head>
 <body>
   <header>
-    <h1>MADRUGA CARD GAME</h1>
+    <h1>PARROT CARD GAME</h1>
   </header>
   <main>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga2.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga3.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga4.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga5.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga6.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-       <img class="card__gif" src="/img/madruga7.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga2.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga3.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga4.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga5.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga6.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__front madruga">
-        <img class="card__img" src="/img/frente-carta.png" alt="logo-chaves">
-      </div>
-      <div class="card__back madruga">
-        <img class="card__gif" src="/img/madruga7.gif" alt="Sr. Madruga">
-      </div>
-    </div>
-  </main>  
+    <ul>
+    </ul>
+  </main> 
+  <script src="/js/script.js"></script>
 </body>
 </html>
